--- a/assignment 2/index.html
+++ b/assignment 2/index.html
@@ -7,8 +7,12 @@
   <body>
     <h2>Welcome to Snake and Ladder game!!</h2>
 
-    <button onclick="rollDice()">Roll Dice</button>
-    <div id=board></div>
-    <canvas id="canvas" width="300" height="300"></canvas>
+    <button type="button" name="button" id="roll" style="position: fixed;">Roll Dice</button>
+    <br><br>
+    <div id= "game"></div>
+
+    <script src="javascript.js">
+
+    </script>
   </body>
 </html>
